--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,4 +6,9 @@
   <td>
     <%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %>
   </td>
+  <td>
+    <%= link_to 'Delete', post_path(post), 
+      method: :delete, 
+      id: "delete_#{post.id}", data: { confirm: "Are you sure?" } %>
+  </td>  
 </tr>
