removed registration functionality

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -16,7 +16,7 @@
      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
       <li>
-        <%= link_to "User Details", edit_user_registration_path %>
+        <%= link_to "TODO: Admin Dashboard", "#" %>
       </li>
       <li class="divider">
       </li>
